# Market_copilot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  MVP_RELEASE_CHECKLIST.md  README.md  RELEASE_NOTES_v0.1.0.md  __init__.py  alembic.ini  config.py  constants.py  pyproject.toml
.claude/agents/: browser-acceptance-tester.md  frontend-implementation-reviewer.md  ui-ux-architect.md
.claude/skills/trading-cockpit-redesign/: SKILL.md
.github/workflows/: ci.yml
api/: alpha_book.py  alpha_factory.py  alpha_registry.py  alpha_target.py  app.py  calibration_study.py  command_center.py  current_alpha_book.py  current_alpha_daily_refresh.py  current_alpha_decision_gate.py  current_alpha_integrity_gate.py  current_alpha_operations.py  current_alpha_performance.py  current_alpha_preview.py  current_alpha_revalidation.py  current_alpha_tournament.py  current_alpha_tournament_sync.py  current_operating_state.py  daily_action_gate.py  daily_close.py  daily_operating_run.py  daily_workflow_dashboard.py  forward_evidence.py  forward_prediction_skill.py  multi_horizon_artifacts.py  multi_horizon_engine.py  multi_horizon_history.py  multi_horizon_ledger.py  multi_horizon_platform.py  multi_horizon_registry.py  operational_book.py  paper_trading_desk.py  portfolio_manager.py  portfolio_terminal.py  portfolio_valuation.py  price_alpha_factory.py  price_panel.py  research_candidate_preview.py
api/ui/: index.html
data/: sp500_universe.csv  sp500_universe_full.csv  sp500_universe_full_meta.json
db/: __init__.py  models.py  session.py
db/migrations/: env.py  script.py.mako
db/migrations/versions/: 0001_initial_schema.py  0002_add_candidate_reviews_table.py  0003_add_candidate_review_rationale.py  0004_add_prediction_runs_table.py  0005_add_prediction_run_session_linkage.py
docs/: prediction_service_audit_v1.md
engine/: __init__.py  market_data.py  market_hours.py  market_screener.py  portfolio.py  prediction_client.py  prediction_strategy.py  reconciler.py  risk.py  scoring.py  strategy.py  universe.py
schemas/: __init__.py
scripts/: __init__.py  seed.py  update_sp500_universe.py
tests/: __init__.py  conftest.py  test_alpha_factory.py  test_alpha_factory_endpoint.py  test_api.py  test_command_center.py  test_command_center_endpoint.py  test_current_alpha_book.py  test_current_alpha_book_endpoint.py  test_current_alpha_daily_refresh.py  test_current_alpha_daily_refresh_endpoint.py  test_current_alpha_decision_gate.py  test_current_alpha_decision_gate_endpoint.py  test_current_alpha_integrity_gate.py  test_current_alpha_integrity_gate_endpoint.py  test_current_alpha_operations.py  test_current_alpha_operations_endpoint.py  test_current_alpha_performance.py  test_current_alpha_performance_endpoint.py  test_current_alpha_preview.py  test_current_alpha_preview_endpoint.py  test_current_alpha_revalidation.py  test_current_alpha_revalidation_endpoint.py  test_current_alpha_tournament.py  test_current_alpha_tournament_endpoint.py  test_current_alpha_tournament_sync.py  test_current_alpha_tournament_sync_endpoint.py  test_current_operating_state.py  test_daily_operating_run.py  test_daily_operating_run_endpoint.py  test_daily_workflow_dashboard.py  test_daily_workflow_dashboard_endpoint.py  test_decision.py  test_market_data.py  test_market_hours.py  test_market_screener.py  test_multi_horizon_platform.py  test_phase25b_ui_state.py  test_phase26_portfolio_manager.py  test_phase27a1_alpha_book_policy.py  (+38 more)
workflows/: decision.py  snapshot.py
