[build-system]
requires      = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "paper_trader"
version         = "0.1.0"
description     = "Virtual portfolio paper-trading system"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools]
packages = [
    "paper_trader",
    "paper_trader.api",
    "paper_trader.db",
    "paper_trader.db.migrations",
    "paper_trader.db.migrations.versions",
    "paper_trader.engine",
    "paper_trader.schemas",
    "paper_trader.workflows",
    "paper_trader.scripts",
]

[tool.setuptools.package-dir]
paper_trader = "."

# ---------------------------------------------------------------------------
# Package discovery note
#
# The repo root (paper_trader/) IS the package directory: it contains both
# pyproject.toml and __init__.py. Auto-discovery is disabled; packages are
# listed explicitly above. The package-dir mapping tells setuptools that the
# paper_trader package root is "." (the repo root), from which subpackage
# paths are derived: paper_trader.api → ./api/, paper_trader.db → ./db/, etc.
#
# For development, add the parent of paper_trader/ to PYTHONPATH:
#
#   export PYTHONPATH=/path/to/parent:$PYTHONPATH
#
# tests/conftest.py handles this automatically for the test suite via a
# sys.path bootstrap (parents[2]).
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths      = ["tests"]
addopts        = "-v --tb=short"
filterwarnings = [
    "error",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning:sqlalchemy",
]
